@@ -15,6 +15,7 @@ Version 1.4.7:
 		- Thanks to @cyphix333 for reporting.
 	Fixed bug with IE placing cursor inside table tag when inserted.
 		- Thanks to @jetand for reporting.
+	Fixed bug with IE placing the cursor before emoticons after inserting them.
 
 Version 1.4.6:
 	Fixed resize issue with Android browsers.
